k8s/globoseq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: globoseq-app
spec:
  selector:
    matchLabels:
      app: globoseq-app
  replicas: 1
  template:
    metadata:
      labels:
        app: globoseq-app
    spec:
      containers:
        - name: seq
          image: datalust/seq:latest
          ports:
            - containerPort: 5341
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: globoseq-service
spec:
  selector:
    app: globoseq-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: globoseq
spec:
  clusterIP: None # headless service
  selector:
    app: globoseq-app
  ports:
    - protocol: TCP
      port: 5341
      targetPort: 5341
